[project]
name = "botpocketflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=6.2.4",
    "dataclasses-json>=0.6.7",
    "faiss-cpu>=1.7,<2.0",
    "flask>=2.3,<4.0",
    "flask-limiter>=3.5",
    "google-auth>=2.25.2",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "gspread>=5.12.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.29,<0.4.0",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.1.0",
    "numpy>=1.24.3",
    "pandas>=2.1.4",
    "pydantic>=1.10,<3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "schedule>=1.2.2",
    "sentence-transformers>=2.2.2",
]
